day 3.2 refactoring & code cleanup